<resources>
    <string name="app_name">M친톡</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="default_web_client_id" translatable="false">751430456068-kuvtvr30aoa2td63fvk0ta20rjie5fue.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="question1_title">MBTI 검사(E/I유형)</string>
    <string name="question1_1">Q1. 어떤 상황에서 더 편안하게 느끼십니까?</string>
    <string name="question1_1_answer1">모임에 나가 사람들과 말하는 것이 좋다.</string>
    <string name="question1_1_answer2">혼자 집에서 조용히 휴식을 하는 쪽이 좋다.</string>

    <string name="question1_2">Q2. 대화를 할 때, 나는 어떻게 하고 싶은가요?</string>
    <string name="question1_2_answer1">자발적으로 먼저 대화를 시작 하는 것이 좋다.</string>
    <string name="question1_2_answer2">다른 사람이 먼저 대화를 시작 하면 경청한다.</string>

    <string name="question1_3">Q3. 황금 같은 주말! 무엇을 하는게 좋은가요?</string>
    <string name="question1_3_answer1">친구들과 만나 시간을 보내거나 모임에 참석합니다.</string>
    <string name="question1_3_answer2">집에서 혼자 하고 싶은 것을 하며 휴식을 합니다. </string>

    <string name="question1_4">Q4. 일을 할 때 내가 원하는 직장의 모습은?</string>
    <string name="question1_4_answer1">많은 사람들과 함께 일하는 것이 좋다.</string>
    <string name="question1_4_answer2">나는 혼자 혹은 소수와 일하는 것이 좋다. </string>

    <string name="question1_5">Q5. 새로운 사람을 만날때 나의 태도는? </string>
    <string name="question1_5_answer1">새로운 사람을 만나는 것은 즐겁다.</string>
    <string name="question1_5_answer2">새로운 사람은 조금 어렵다. 천천히! </string>

    <!-- 질문2 -->
    <string name="question2_title">MBTI 검사(S/N유형)</string>
    <string name="question2_1">Q1. 비행기를 탔는데 갑자기 흔들린다면?</string>
    <string name="question2_1_answer1">안전벨트를 착용하고 주변이 안전한지 확인하자.</string>
    <string name="question2_1_answer2">만약 추락해서 무인도에 가면 어떻게 살아남지?</string>

    <string name="question2_2">Q2. 사과하면 제일 먼저 떠오른 것은?</string>
    <string name="question2_2_answer1">빨간색, 둥글다, 맛있다</string>
    <string name="question2_2_answer2">백설공주, 뉴턴, 애플폰</string>

    <string name="question2_3">Q3. 집에 가는 길 오늘은?</string>
    <string name="question2_3_answer1">나갔던 길로 다시 돌아오는게 편하다.</string>
    <string name="question2_3_answer2">오늘은 새로운 곳에 들렀다 가볼까?</string>

    <string name="question2_4">Q4. 평소에 요리를 할때 나는?</string>
    <string name="question2_4_answer1">레시피에 나온 그대로 맞춰야 한다.</string>
    <string name="question2_4_answer2">눈대중으로 대충 넣어서 요리를 한다.</string>

    <string name="question2_5">Q5. 노래를 들을 때 선정 기준은?</string>
    <string name="question2_5_answer1">멜로디가 좋아야 한다.</string>
    <string name="question2_5_answer2">가사가 좋으면 좋다.</string>

    <!-- 질문3 -->
    <string name="question3_title">MBTI 검사(T/F유형)</string>
    <string name="question3_1">Q1. 어떤 결정을 할때 나의 기준은.</string>
    <string name="question3_1_answer1">논리적인 판단과 사실을 기준으로 한다.</string>
    <string name="question3_1_answer2">사실보다 감정과 기분에 기반해서 결정한다.</string>

    <string name="question3_2">Q2. 나의 감정을 표현하는 것에 </string>
    <string name="question3_2_answer1">내 감정을 솔직하게 표현 하는건 어렵다.</string>
    <string name="question3_2_answer2">내 감정에 솔직하게 표현하는 건 재밌어.</string>

    <string name="question3_3">Q3. 다른 사람과 의견이 충돌이 났다.</string>
    <string name="question3_3_answer1">논리적으로 잘못된 부분을 설명 해준다.</string>
    <string name="question3_3_answer2">내 의견 보다 상대 의견을 들어 보자.</string>

    <string name="question3_4">Q4. 다른 사람의 고민을 들어 줄때 나는 </string>
    <string name="question3_4_answer1">그럴 때는 이렇게 하면 좀 더 좋을거야. </string>
    <string name="question3_4_answer2">힘들었겠다... 고생했어. </string>

    <string name="question3_5">Q5. 나에게 있어서 최고의 칭찬은? </string>
    <string name="question3_5_answer1">와 잘했어! 뭐든 하면 잘 하는구나! </string>
    <string name="question3_5_answer2">고생했어. 진짜 열심히 노력했구나! </string>

    <!-- 질문4 -->
    <string name="question4_title">MBTI 검사(J/P유형)</string>
    <string name="question4_1">Q1. 여행을 떠나기 전 나는</string>
    <string name="question4_1_answer1">전날에 입을 옷들과 물건들을 정리해 놓는다.</string>
    <string name="question4_1_answer2">나가기 전에 입을 옷들과 물건을 챙긴다.</string>

    <string name="question4_2">Q2. 갑자기 친구가 놀자고 부르면?</string>
    <string name="question4_2_answer1">일정표를 보고 결정한다.</string>
    <string name="question4_2_answer2">재밌겠다! 별일 없으니 나가자.</string>

    <string name="question4_3">Q3. 나의 계획은?</string>
    <string name="question4_3_answer1">할 거면 제대로! 일별로 세부 일정을 정리한다.</string>
    <string name="question4_3_answer2">대충 할 것만 정해 놓고 나머지는 그때 마다 정한다.</string>

    <string name="question4_4">Q4. 밥을 먹으러 나갈때의 나는?</string>
    <string name="question4_4_answer1">식당의 정보를 알아보고 맘에 드는 식당을 찾아간다.</string>
    <string name="question4_4_answer2">가서 문이 닫혀 있으면 옆 식당에 간다.</string>

    <string name="question4_5">Q5. 집 안 정리 정돈은?</string>
    <string name="question4_5_answer1">정리를 잘해놔야 마음이 편하다.</string>
    <string name="question4_5_answer2">어질러져 있는것도 하나의 질서다.</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>

