<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/btn_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/mbti_question_back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_left_arrow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_question_title"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:text="@string/question1_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <!-- 질문1 -->
            <TextView
                android:id="@+id/tv_question_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="#d8d8d8"
                android:text="@string/question1_1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <RadioGroup
                android:id="@+id/rg_answer_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1_1_answer1"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1_1_answer2"
                    android:textSize="14sp" />

            </RadioGroup>

            <!-- 질문2 -->
            <TextView
                android:id="@+id/tv_question_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:background="#d8d8d8"
                android:text="@string/question1_2"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <RadioGroup
                android:id="@+id/rg_answer_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1_2_answer1"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1_2_answer2"
                    android:textSize="14sp" />
            </RadioGroup>

            <!-- 질문3 -->
            <TextView
                android:id="@+id/tv_question_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="#d8d8d8"
                android:text="@string/question1_3"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <RadioGroup
                android:id="@+id/rg_answer_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1_3_answer1"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1_3_answer2"
                    android:textSize="14sp" />

            </RadioGroup>

            <TextView
                android:id="@+id/tv_question_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#d8d8d8"
                android:padding="5dp"
                android:text="@string/question1_4"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <RadioGroup
                android:id="@+id/rg_answer_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1_4_answer1"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1_4_answer2"
                    android:textSize="14sp" />

            </RadioGroup>

            <TextView
                android:id="@+id/tv_question_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#d8d8d8"
                android:padding="5dp"
                android:text="@string/question1_5"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <RadioGroup
                android:id="@+id/rg_answer_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1_5_answer1"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1_5_answer2"
                    android:textSize="14sp" />
            </RadioGroup>


        </LinearLayout>

    </ScrollView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="다음 페이지"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>